// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage must show the component with customized image 1`] = `
<img
  alt="Product Image"
  className="productImg undefined"
  src="https://hola.jpg"
/>
`;

exports[`ProductImage must show the component with the product image 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product Image"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
